Fix Layout Bug ✌️

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -148,3 +148,26 @@ body {
 .tabs {
   color: red !important;
 }
+.lineupSection {
+  position: relative;
+  padding: 10px;
+}
+.overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(5, 5, 5, 0.11);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  z-index: 92;
+  text-align: center;
+  font-size: 50px;
+  color: white;
+}
